--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "brain/monkey": "^2.0.2",
         "satooshi/php-coveralls": "^1.0",
         "squizlabs/php_codesniffer": "^3.2",
-        "codedungeon/phpunit-result-printer": "^0.4.4"
+        "codedungeon/phpunit-result-printer": "^0.4.4",
+        "doctrine/inflector": "1.2"
     },
     "autoload": {
         "psr-4": {
