--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "require": {
         "php": "^7.1.3",
         "rareloop/lumberjack-core": "^3.0.0",
+        "rareloop/router": "^3.2.1",
         "symfony/console": "^4.1"
     },
     "require-dev": {
