--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
     "name": "rareloop/hatchet",
     "require": {
         "php": "^7.1.3",
+        "rareloop/router": "~3.2.1",
         "rareloop/lumberjack-core": "^3.2.0",
-        "rareloop/router": "^3.2.1",
         "symfony/console": "^4.1"
     },
     "require-dev": {
