--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
         "php": "^7.1.3",
         "rareloop/router": "~3.2.1",
         "rareloop/lumberjack-core": "^3.2.0",
-        "symfony/console": "^4.1"
+        "symfony/console": "^4.1",
+        "php-mock/php-mock": "^2.0",
+        "icanboogie/inflector": "^1.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0",
