--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,9 @@
     "name": "rareloop/hatchet",
     "require": {
         "php": "^7.1.3",
-        "rareloop/router": "^3.2.1 || ^4.0.0",
-        "rareloop/lumberjack-core": "^3.3.1 || ^4.0.0",
+        "rareloop/lumberjack-core": "^4.2.0",
         "symfony/console": "^4.1",
-        "icanboogie/inflector": "^1.4",
-        "upstatement/routes": "^0.4"
+        "icanboogie/inflector": "^1.4"
     },
     "require-dev": {
         "php-mock/php-mock": "^2.0",
