--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,9 @@
     "name": "rareloop/hatchet",
     "require": {
         "php": "^7.1.3",
-        "rareloop/lumberjack-core": "^4.2.0",
+        "rareloop/lumberjack-core": "^4.3.1",
         "symfony/console": "^4.1",
-        "icanboogie/inflector": "^1.4"
+        "icanboogie/inflector": "^2.0"
     },
     "require-dev": {
         "php-mock/php-mock": "^2.0",
@@ -14,7 +14,7 @@
         "satooshi/php-coveralls": "^1.0",
         "squizlabs/php_codesniffer": "^3.2",
         "codedungeon/phpunit-result-printer": "^0.4.4",
-        "mikey179/vfsStream": "^1.6"
+        "mikey179/vfsstream": "^1.6"
     },
     "autoload": {
         "psr-4": {
