Increase minimum package requirements

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "php": "^7.1.3",
         "rareloop/lumberjack-core": "^4.3.1",
         "symfony/console": "^4.1",
-        "icanboogie/inflector": "^2.0"
+        "icanboogie/inflector": "^2.0",
+        "statamic/stringy": "^3.1.1"
     },
     "require-dev": {
         "php-mock/php-mock": "^2.0",
@@ -14,7 +15,7 @@
         "satooshi/php-coveralls": "^1.0",
         "squizlabs/php_codesniffer": "^3.2",
         "codedungeon/phpunit-result-printer": "^0.4.4",
-        "mikey179/vfsstream": "^1.6"
+        "mikey179/vfsstream": "^1.6.8"
     },
     "autoload": {
         "psr-4": {
