--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,20 @@
 {
     "name": "rareloop/hatchet",
     "require": {
-        "php": "^7.1.3",
-        "rareloop/lumberjack-core": "^5.0.0",
+        "php": "^7.3.0||^8.0.0",
+        "rareloop/lumberjack-core": "^5.0.1",
         "symfony/console": "^4.1",
         "icanboogie/inflector": "^2.0",
         "statamic/stringy": "^3.1.1"
     },
     "require-dev": {
         "php-mock/php-mock": "^2.0",
-        "phpunit/phpunit": "^6.0",
-        "mockery/mockery": "^1.0.0",
-        "brain/monkey": "^2.0.2",
-        "satooshi/php-coveralls": "^1.0",
+        "phpunit/phpunit": "^9.5.20",
+        "mockery/mockery": "^1.4.4",
+        "brain/monkey": "^2.4.0",
+        "php-coveralls/php-coveralls": "^2.5.2",
         "squizlabs/php_codesniffer": "^3.5",
-        "codedungeon/phpunit-result-printer": "^0.4.4",
-        "mikey179/vfsstream": "^1.6.8"
+        "mikey179/vfsstream": "^1.6.9"
     },
     "autoload": {
         "psr-4": {
