--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "rareloop/hatchet",
     "require": {
-        "php": "^7.3.0||^8.0.0",
-        "rareloop/lumberjack-core": "^5.0.1",
+        "php": "^8.0.0",
+        "rareloop/lumberjack-core": "^5.0.1||^6.0.0",
         "symfony/console": "^4.1",
         "icanboogie/inflector": "^2.0",
         "statamic/stringy": "^3.1.1"
