--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "require": {
         "php": "^8.0.0",
         "rareloop/lumberjack-core": "^5.0.1||^6.0.0",
-        "symfony/console": "^4.1",
+        "symfony/console": "^5.0 || ^6.0 || ^7.0",
         "icanboogie/inflector": "^2.0",
         "statamic/stringy": "^3.1.1"
     },
